--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-{% load i18n %}  
-{% block content %}
+{% extends "base.html" %} {% load i18n %} {% block content %}
 <br>
 <br>
 <br>
@@ -25,5 +23,4 @@
 <br>
 <br>
 <br>
-<br>
-{% endblock %}
+<br> {% endblock %}
