--- a/templates/index.html
+++ b/templates/index.html
@@ -52,13 +52,7 @@
     }
 </style>
 
-{% endblock %} {% block carousel %} {% if user.is_authenticated %}
-<!-- <br><br>
-<div class="alert alert-success" style="padding-left: 40%;" role="alert">
-  WELCOME {{user.first_name}},<br>
-  You are now Logged in
-</div>
-{% endif %} -->
+{% endblock %} {% block carousel %}
 <div id="carouselExampleIndicators" class="carousel slide my-carousel
     my-carousel" data-ride="carousel">
     <ol class="carousel-indicators">
