--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,51 +1,117 @@
-{% extends "base.html" %}
-{% load bootstrap %}
-{% load i18n %}
-{% load account socialaccount %}
+{% extends "base.html" %} {% load bootstrap %} {% load i18n %} {% load account socialaccount %} {% block head_title %}{% trans "Sign In" %}{% endblock %} 
+{% block css %}
+<style>
+    .carousel-item {
+        height: 100vh;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+    }
+    
+    .carousel-item-content {
+        /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+        font-size: 24px;
+    }
+    
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+    
+    .link-button {
+        color: white;
+        background-color: #555555;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    
+    .link-button:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #222222;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+</style>
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% endblock %} {% block carousel %}
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active" style="background-image:
+        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');">
+            <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+                  <div class="container" style="color: white;">
 
-{% block content %}
-<br><br>
-<div class="container" style="color: white;">
+
+                    <h1>{% trans "Sign In" %}</h1>
+                
+                    {% get_providers as socialaccount_providers %} {% if socialaccount_providers %}
+                    <p>{% blocktrans with site.name as site_name %}Please sign in with you IIT Guwahati Microsoft account {% endblocktrans %}</p>
+                
+                    <div class="socialaccount_ballot">
+                
+                        <ul class="socialaccount_providers">
+                            <div class="col-md-5 col-lg-5">
+                                <h5 class="btn btn-outline-danger alert-link" style="color:black;">{% include "socialaccount/snippets/provider_list.html" with process="login" %}</h5>
+                            </div>
+                        </ul>
+                
+                
+                    </div>
+                
+                    {% include "socialaccount/snippets/login_extra.html" %} {% else %}
+                    <p>{% blocktrans %}If you have not created an account yet, then please
+                        <a href="#">sign up</a> first.{% endblocktrans %}</p>
+                    {% endif %}
+                    
+                </div>
+
+                </div>
 
 
-<h1>{% trans "Sign In" %}</h1>
+            </div>
 
-{% get_providers as socialaccount_providers %}
+        </div>
 
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with you IIT Guwahati Microsoft account
-{% endblocktrans %}</p>
 
-<div class="socialaccount_ballot">
 
-  <ul class="socialaccount_providers">
-    <div class="col-md-5 col-lg-5">
-      <h5 class="btn btn-outline-danger alert-link" style="color:black;">{% include "socialaccount/snippets/provider_list.html" with process="login" %}</h5>
+
+
+
+        <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
+
     </div>
-  </ul>
 
-  <div class="login-or">{% trans 'or' %}</div>
 
 </div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="#">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-<br><br>
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form|bootstrap }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button class="primaryAction btn btn-success" type="submit">{% trans "Sign In" %}</button><br><br>
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-</form>
-</div>
-<br><br><br><br>
 {% endblock %}
