--- a/celebration/templates/celebration/celebration_detail.html
+++ b/celebration/templates/celebration/celebration_detail.html
@@ -1,23 +1,22 @@
-{% extends 'base.html' %}
-
-{% block css %}
+{% extends 'base.html' %} {% block css %}
 <style>
     div#carousel {
         perspective: 100%;
-        background: #100000;
-        padding-top: 10%;
+        background: #ffffff;
+        padding-top: 1%;
+        padding-bottom: 10%;
         font-size: 0;
         margin-bottom: 3rem;
         overflow: hidden;
     }
-
+    
     figure#spinner {
         transform-style: preserve-3d;
         height: 300px;
         transform-origin: 50% 50% -500px;
         transition: 1s;
     }
-
+    
     figure#spinner img {
         width: 40%;
         max-width: 425px;
@@ -26,41 +25,41 @@
         transform-origin: 50% 50% -500px;
         outline: 1px solid transparent;
     }
-
+    
     figure#spinner img:nth-child(1) {
         transform: rotateY(0deg);
     }
-
+    
     figure#spinner img:nth-child(2) {
         transform: rotateY(-45deg);
     }
-
+    
     figure#spinner img:nth-child(3) {
         transform: rotateY(-90deg);
     }
-
+    
     figure#spinner img:nth-child(4) {
         transform: rotateY(-135deg);
     }
-
+    
     figure#spinner img:nth-child(5) {
         transform: rotateY(-180deg);
     }
-
+    
     figure#spinner img:nth-child(6) {
         transform: rotateY(-225deg);
     }
-
+    
     figure#spinner img:nth-child(7) {
         transform: rotateY(-270deg);
     }
-
+    
     figure#spinner img:nth-child(8) {
         transform: rotateY(-315deg);
     }
-
+    
     div#carousel~span {
-        color: #fff;
+        color: rgb(0, 0, 0);
         margin: 5%;
         display: inline-block;
         text-decoration: none;
@@ -71,20 +70,103 @@
         border-bottom: none;
         line-height: 0;
     }
-
+    
     div#carousel~span:hover {
         color: #888;
         cursor: pointer;
     }
 </style>
-{% endblock css %}
+<style>
+    .carousel-item {
+        height: 100vh;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+    }
+    
+    .carousel-item-content {
+        /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+        font-size: 24px;
+    }
+    
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+    
+    .link-button {
+        color: white;
+        background-color: #555555;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    
+    .link-button:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #222222;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+</style>
 
-{% block content %}
-<br><br><br>
-<div class="container">
-    <h1 style="text-align: center;">{{object.name}}</h1>
-    <p>{{object.desc}}</p>
+{% endblock %} {% block carousel %}
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active" style="background-image:
+        url('{{object.pic.url}}');">
+            <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+                    <h1>{{object.name|safe}}</h1>
+                    <div class="addthis_inline_share_toolbox"></div><br><br>
+                    <h5>{{object.desc|safe}}</h5>
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+        <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
+
+    </div>
+
 </div>
+
+{% endblock %} {% block content %}
 <div id="carousel">
     <figure id="spinner">
         <img src="https://source.unsplash.com/random" alt>
@@ -96,18 +178,21 @@
         <img src="https://source.unsplash.com/weekly?water" alt>
         <img src="https://source.unsplash.com/WLUHO9A_xik/1600x900" alt>
     </figure>
+    <br><br>
 </div>
 <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
-
-{% endblock content %}
-
-{% block js %}
+<br><br> {% endblock content %} {% block js %}
 <script>
     var angle = 0;
+
     function galleryspin(sign) {
         spinner = document.querySelector("#spinner");
-        if (!sign) { angle = angle + 45; } else { angle = angle - 45; }
+        if (!sign) {
+            angle = angle + 45;
+        } else {
+            angle = angle - 45;
+        }
         spinner.setAttribute("style", "-webkit-transform: rotateY(" + angle + "deg); -moz-transform: rotateY(" + angle + "deg); transform: rotateY(" + angle + "deg);");
     }
 </script>
