--- a/inplace/templates/inplace/inplace_detail.html
+++ b/inplace/templates/inplace/inplace_detail.html
@@ -1,21 +1,101 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% load static %} {% block css %}
+<style>
+    .carousel-item {
+        height: 100vh;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+    }
+    
+    .carousel-item-content {
+        /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+        font-size: 24px;
+    }
+    
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+    
+    .link-button {
+        color: white;
+        background-color: #555555;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    
+    .link-button:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #222222;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+</style>
+
+{% endblock %} {% block carousel %}
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active" style="background-image:
+        url('{{object.pic.url}}');">
+            <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+                    <h1>{{object.title|safe}}</h1>
+                    <div class="addthis_inline_share_toolbox"></div><br><br>
+                    <h5>{{object.intro|safe}}</h5>
+                </div>
 
 
-{% block content %}
+            </div>
+
+        </div>
+
+
+
+
+
+
+        <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
+
+    </div>
+
+</div>
+
+{% endblock %} {% block content %}
 <br><br><br>
 <div class="container" style="text-align: center;">
-    <img src="{{object.pic.url}}" alt="" width="100%">
-    <h1>{{object.title|safe}}</h1>
-    <div class="addthis_inline_share_toolbox"></div><br><br>
-    <h5>{{object.intro|safe}}</h5>
     <p>{{object.article|safe}}</p>
 
     <h1>..............</h1>
 </div>
-{% endblock content %}
-
-{% block js %}
+{% endblock content %} {% block js %}
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-60a8891d6f283957"></script>
 {% endblock js %}
-    
-    
