--- a/paperman/templates/paperman/paperman_list.html
+++ b/paperman/templates/paperman/paperman_list.html
@@ -1,59 +1,148 @@
-{% extends "base.html" %}
-{% load humanize %}
-{% load bootstrap %}
-{% block content %}
-<br><br><br>
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-	Filter
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
-	<div class="modal-dialog modal-dialog-scrollable">
-	  <div class="modal-content">
-		<div class="modal-header">
-		  <h5 class="modal-title" id="exampleModalLabel">Filters</h5>
-		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		</div>
-		<div class="modal-body">
-			<form method="GET" class="">
-				{{filter.form|bootstrap}}
-				<button type="submit" class="btn btn-primary">Search</button>
-				<a href="{% url 'paperman:all' %}" class="btn btn-secondary">Clear</a>
-				
-			</form>
-		</div>
-		<div class="modal-footer">
-		  
-		</div>
-	  </div>
-	</div>
-  </div>
-  <br><br>
-<div id="main">
-	{% if paperman_list %}
-	<div class="row">
-		{% for i in filter.qs %}
-		<div class="col-xs-12 col-sm-4 col-md-4">
+{% extends "base.html" %} {% load humanize %} {% load bootstrap %} {% load static %} {% block css %}
+<style>
+    .carousel-item {
+        height: 100vh;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+    }
+    
+    .carousel-item-content {
+        /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+        font-size: 24px;
+    }
+    
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+    
+    .link-button {
+        color: white;
+        background-color: #555555;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    
+    .link-button:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #222222;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+</style>
 
-			<div class="card mx-5 my-5" style="width: 18rem;">
-				<div class="card-body">
-					<h5 class="card-title text-muted">{{i.name}}</h5>
-					<h6 class="card-subtitle mb-2 text-muted"></h6>
-					<div class="card-footer" style="text-align: center;">
-						<a href="{{i.upload.url}}"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
-						  <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
-						  <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
-						</svg></a>
-					  </div>
-				</div>
-			</div>
-		</div>
-		{% endfor %}
-	</div>
+{% endblock %} {% block carousel %}
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active" style="background-image:
+        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');">
+            <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+                    <h1><b>About <br> Paper-Man </b> </h1>
+                    <br>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corporis, natus quos praesentium rerum aspernatur laudantium at nobis cupiditate velit fuga quo repellendus, consequuntur officiis. Repudiandae animi cupiditate cum ea?
+                    </p>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+						Filter out your course
+					  </button>
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+        <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
+
+    </div>
+
 
 </div>
 
-{% endif %}
-{% endblock %}
+{% endblock %} {% block content %}
 
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Filters</h5>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+            <div class="modal-body">
+                <form method="GET" class="">
+                    {{filter.form|bootstrap}}
+                    <button type="submit" class="btn btn-primary">Search</button>
+                    <a href="{% url 'paperman:all' %}" class="btn btn-secondary">Clear</a>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+<br><br>
+<div id="main">
+    {% if paperman_list %}
+    <div class="row">
+        {% for i in filter.qs %}
+        <div class="col-xs-12 col-sm-4 col-md-4">
+
+            <div class="card mx-5 my-5" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-muted">{{i.name}}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <div class="card-footer" style="text-align: center;">
+                        <a href="{{i.upload.url}}"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
+						  <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
+						  <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
+						</svg></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+</div>
+
+{% endif %} {% endblock %}
