--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load static %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
@@ -29,30 +29,17 @@
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
         height: 100%;
-        padding: 15% 20% 0 15%;
-    }
-    
-    .link-button {
-        color: white;
-        background-color: #555555;
-        display: inline-block;
-        text-decoration: none;
-        padding: 5px 10px;
-        border-radius: 5px;
-    }
-    
-    .link-button:hover {
-        text-decoration: none;
-        color: white;
-        background-color: #222222;
-        display: inline-block;
-        text-decoration: none;
-        padding: 5px 10px;
-        border-radius: 5px;
+        padding: 10% 20% 0 15%;
     }
 </style>
 
-{% endblock %} {% block carousel %}
+{% endblock %} {% block carousel %} {% if user.is_authenticated %}
+<!-- <br><br>
+<div class="alert alert-success" style="padding-left: 40%;" role="alert">
+  WELCOME {{user.first_name}},<br>
+  You are now Logged in
+</div>
+{% endif %} -->
 <div id="carouselExampleIndicators" class="carousel slide my-carousel
     my-carousel" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -60,18 +47,20 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image:
-        url('{{object.pic.url}}');">
+        url('{% block navimg %}https://live.staticflickr.com/7415/11546057593_1f49a71617_b.jpg{% endblock navimg %}'); opacity: 0.8;">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1>{{object.title|safe}}</h1>
-                    <div class="addthis_inline_share_toolbox"></div><br><br>
-                    <h5>{{object.intro|safe}}</h5>
+
+                    {% block navcontent %} {% endblock navcontent %}
+
+
                 </div>
 
 
             </div>
 
         </div>
+
 
 
 
@@ -87,15 +76,14 @@
 
     </div>
 
+
 </div>
 
 {% endblock %} {% block content %}
-<br><br><br>
-<div class="container" style="text-align: center;">
-    <p>{{object.article|safe}}</p>
-
-    <h1>..............</h1>
+<br><br><br><br><br>
+<div class="">
+    {% block prepost %}{% endblock %} {% block post_content %}{% endblock %} {% block postpost %}{% endblock %}
 </div>
-{% endblock content %} {% block js %}
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-60a8891d6f283957"></script>
-{% endblock js %}
+
+
+{% endblock %} {% block extrajs %} {% endblock %}
