--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,18 +1,10 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
-
-{% block content %}
+{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans "Change Password" %}{% endblock %} {% block navcontent %}
 <br><br><br><br><br><br>
-    <h1>{% trans "Change Password" %}</h1>
+<h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
-    <br><br><br><br><br><br>
-{% endblock %}
+<form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    {% csrf_token %} {{ form.as_p }}
+    <button type="submit" name="action">{% trans "Change Password" %}</button>
+    <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+</form>
+<br><br><br><br><br><br> {% endblock %}
