--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,17 +1,9 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-
-{% block head_title %}{% trans "Set Password" %}{% endblock %}
-
-{% block content %}
+{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans "Set Password" %}{% endblock %} {% block navcontent %}
 <br><br><br><br><br><br>
-    <h1>{% trans "Set Password" %}</h1>
+<h1>{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
-    <br><br><br><br><br><br>
-{% endblock %}
+<form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+    {% csrf_token %} {{ form.as_p }}
+    <input type="submit" name="action" value="{% trans 'Set Password' %}" />
+</form>
+<br><br><br><br><br><br> {% endblock %}
