complete UI part

--- a/bios/templates/bios/project_detail.html
+++ b/bios/templates/bios/project_detail.html
@@ -15,7 +15,7 @@
     </ul>
 </details>
 <details>
-    <summary>Project Description</summary>
+    <summary>People Involved in the project</summary>
     <ul>
         {% for i in bios %}
         <li>{{i}}</li>
