--- a/paperman/templates/paperman/paperman_list.html
+++ b/paperman/templates/paperman/paperman_list.html
@@ -60,13 +60,14 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image:
-        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');">
+        url('/static/Paperman/Cover.jpg');">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
                     <h1><b>About <br> Paper-Man </b> </h1>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corporis, natus quos praesentium rerum aspernatur laudantium at nobis cupiditate velit fuga quo repellendus, consequuntur officiis. Repudiandae animi cupiditate cum ea?
+                        Not only the hero you need, but also the one you deserve! Paperman is one of its kind initiative by Cepstrum with the sole aim of creating a repository of past question papers and study resources to aid your academic needs. We have all the courses of
+                        first year and B.tech courses taught by Department of EEE covered.
                     </p>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
 						Filter out your course
