--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -1,22 +1,26 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block css %}
+{% extends 'shop/base.html' %} {% load crispy_forms_tags %} {% block padding %}
 <style>
-    label {
-        color: black;
+    .carousel-item-screen {
+        color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 1% 1% 0 1%;
     }
 </style>
-{% endblock css %} {% block content %}
+{% endblock padding %} {% block navcontent %}
 
-<main>
+<main style="font-size: 60%;">
     <div class="container wow fadeIn">
 
         <!-- Heading -->
-        <h2 class="my-5 h2 text-center">Checkout form</h2>
+        <h2 style="color: wheat;" class="my-5 h2 text-center">Checkout form</h2>
 
         <!--Grid row-->
         <div class="row">
 
             <!--Grid column-->
-            <div class="col-md-8 mb-4">
+            <div class="col-md-8">
 
                 <!--Card-->
                 <div class="card">
@@ -25,18 +29,18 @@
                     <form method="POST" class="card-body">
                         {% csrf_token %}
                         <!--address-->
-                        <div class="md-form mb-5">
+                        <div class="md-form">
                             {{ form.name }}
                             <label for="address-2" class="">Name You want on the Item</label>
                         </div>
 
-                        <div class="md-form mb-5">
+                        <div class="md-form">
                             {{ form.street_address }}
                             <label for="address" class="">Address</label>
                         </div>
 
                         <!--address-2-->
-                        <div class="md-form mb-5">
+                        <div class="md-form">
                             {{ form.apartment_address }}
                             <label for="address-2" class="">Address 2 (optional)</label>
                         </div>
@@ -45,13 +49,13 @@
                         <div class="row">
 
                             <!--Grid column-->
-                            <div class="col-lg-4 col-md-12 mb-4">
+                            <div class="col-lg-4 col-md-12">
                                 <label for="country">Country</label> {{ form.country }}
                             </div>
                             <!--Grid column-->
 
                             <!--Grid column-->
-                            <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="col-lg-4 col-md-6 ">
 
                                 <label for="zip">Zip</label> {{ form.zip }}
                                 <div class="invalid-feedback">
@@ -66,16 +70,9 @@
 
                         <hr>
 
-                        <div class="custom-control custom-checkbox">
-                            <input {% if form.same_billing_address.value %}checked{% endif %} type="checkbox" class="custom-control-input" name="same_billing_address" id="same-address">
-                            <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
-                        </div>
-                        <div class="custom-control custom-checkbox">
-                            <input {% if form.save_info.value %}checked{% endif %} type="checkbox" class="custom-control-input" name="save_info" id="save-info">
-                            <label class="custom-control-label" for="save-info">Save this information for next time</label>
-                        </div>
 
-                        <hr>
+
+
 
                         <div class="d-block my-3">
                             {% for value, name in form.fields.payment_option.choices %}
@@ -126,7 +123,7 @@
                         <span class="text-success">-$0</span>
                     </li> {% endcomment %}
                     <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
+                        <span>Total (INR)</span>
                         <strong>{{ order.get_total_price }}</strong>
                     </li>
                 </ul>
@@ -141,4 +138,4 @@
 </main>
 <!--Main layout-->
 
-{% endblock content %}
+{% endblock navcontent %}
