--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,4 +1,21 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'shop/base.html' %} {% load cart_template_tags %} {% block navcontent %}
+<h1>Cepstrum's Mechendise</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eaque sunt saepe quod veniam, earum numquam omnis optio maiores esse blanditiis deserunt, labore voluptatum necessitatibus recusandae aspernatur, nemo quas excepturi?</p>
+
+{% if user.is_authenticated %}
+<a href="{% url 'core:order-summary' %}" class="btn btn-primary">
+    {% if request.user|cart_item_count != 0 %}
+      <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
+    {% else %}
+    <span class="badge red z-depth-1 mr-1"> 0 </span>
+    {% endif %}
+    <i class="fas fa-shopping-cart"></i>
+    <span class="clearfix d-none d-sm-inline-block"> Cart </span>
+    </a>
+<a href="{% url 'core:my_cart' %}" class="btn btn-primary">
+    <i class="fas fa-shopping-cart"></i>
+    <span class="clearfix d-none d-sm-inline-block"> My orders </span>
+</a>{% endif %} {% endblock navcontent %} {% block content %}
 <br><br>
 <main>
     <div class="container">
