--- a/shop/templates/shop/payment.html
+++ b/shop/templates/shop/payment.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block css %}
+{% extends 'shop/base.html' %} {% block padding %}
 <style>
     #stripeBtnLabel {
         font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -68,7 +68,7 @@
         border: 1px solid transparent;
         border-radius: 4px;
         background-color: white;
-        box-shadow: 0 1px 3px 0 #e6ebf1;
+        box-shadow: 0 1px 3px 0 #000000;
         -webkit-transition: box-shadow 150ms ease;
         transition: box-shadow 150ms ease;
     }
@@ -88,13 +88,21 @@
     .current-card-form {
         display: none;
     }
+    
+    .carousel-item-screen {
+        color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 1% 10% 0 15%;
+    }
 </style>
-{% endblock css %} {% block content %}
+{% endblock padding %} {% block navcontent %}
 
 <main>
     <div class="container wow fadeIn">
 
-        <h2 class="my-5 h2 text-center">Payment</h2>
+        <h2 style="color: #cfd7df;" class="my-5 h2 text-center">Payment</h2>
 
 
 
@@ -102,8 +110,8 @@
         <div class="col-md-12 mb-4">
 
             <!-- Heading -->
-            <h4 class="d-flex justify-content-between align-items-center mb-3">
-                <span class="text-muted">Your cart</span>
+            <h4 class="d-flex justify-content-between align-items-center mb-3" style="color: wheat;">
+                <span class="">Your cart</span>
                 <span class="badge badge-secondary badge-pill">{{ order.items.count }}</span>
             </h4>
 
@@ -112,10 +120,11 @@
 
                 {% for order_item in order.items.all %}
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0">{{ order_item.quantity }} x {{ order_item.item.item_name }}</h6>
-                        <small class="text-muted">{{ order_item.item.description }}</small>
-                    </div>
+                    <details>
+                        <summary>{{ order_item.quantity }} x {{ order_item.item.item_name }}</summary>
+                        <p>{{ order_item.item.description }}</p>
+                    </details>
+
                     <span class="text-muted">{{ order_item.get_final_price }}</span>
                 </li>
                 {% endfor %} {% comment %}
@@ -215,4 +224,4 @@
     </div>
 </main>
 
-{% endblock content %} {% block js %} {% endblock js %}
+{% endblock navcontent %}
