--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -1,127 +1,82 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'shop/base.html' %} {% block navcontent %}
 
 <!--Main layout-->
-<main class="mt-5 pt-4">
-    <div class="container dark-grey-text mt-5">
 
-        <!--Grid row-->
-        <div class="row wow fadeIn">
+<div class="container">
 
-            <!--Grid column-->
-            <div class="col-md-6 mb-4">
+    <!--Grid row-->
+    <div class="row">
 
-                <img src="{{object.pic.url}}" class="img-fluid" alt="">
+        <!--Grid column-->
+        <div class="col-md-6 mb-4">
 
+            <img src="{{object.pic.url}}" class="img-fluid" alt="">
+            <div style="padding-top: 10%;">
+                {% if user.is_authenticated %}
+                <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p">Add to cart
+                <i class="fas fa-shopping-cart ml-1"></i>
+            </a> {{ object.get_quantity_in_chart }}
+                <a href="{{ object.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">Remove From cart
+                <i class="fas fa-trash ml-1"></i>
+            </a> {% else %}
+                <a href="{% url 'account_login' %}" class="btn btn-primary btn-md my-0 p">Login
+                <i class="fas fa-trash ml-1"></i>
+            </a> {% endif %}
             </div>
-            <!--Grid column-->
+        </div>
+        <!--Grid column-->
 
-            <!--Grid column-->
-            <div class="col-md-6 mb-4">
+        <!--Grid column-->
+        <div class="col-md-6 mb-4">
 
-                <!--Content-->
-                <div class="p-4">
+            <!--Content-->
+            <div class="p-4">
+                <p class="lead">
 
-                    <div class="mb-3">
-                        <a href="">
-                            <span class="badge purple mr-1">{{ object.get_category_display }}</span>
-                        </a>
-                        <a href="">
-                            <span class="badge blue mr-1">{{ object.get_label_display }}</span>
-                        </a>
-                    </div>
-
-                    <p class="lead">
-
-                        {% if object.discount_price %}
-                        <span class="mr-1">
-              <del>Rs{{ object.price }}</del>
+                    {% if object.discount_price %}
+                    <span class="mr-1">
+              <del>&#8377 {{ object.price }}</del>
               </span>
-                        <span>&#8377 {{ object.discount_price }}</span> {% else %}
-                        <span>&#8377 {{ object.price }}</span> {% endif %}
+                    <span>&#8377 {{ object.discount_price }}</span> {% else %}
+                    <span>&#8377 {{ object.price }}</span> {% endif %}
 
-                    </p>
+                </p>
 
-                    <p class="lead font-weight-bold">{{ object.item_name }}</p>
+                <p class="lead font-weight-bold">{{ object.item_name }}</p>
+                <details>
+                    <summary>Item Description</summary>
+                    <h6>{{ object.description }}</h6>
+                </details>
 
-                    <p>{{ object.description }}</p>
-
-                    {% comment %}
-                    <form class="d-flex justify-content-left">
-                        <!-- Default input -->
-                        <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
-                        <button class="btn btn-primary btn-md my-0 p" type="submit">Add to cart
+                <br> {% comment %}
+                <form class="d-flex justify-content-left">
+                    <!-- Default input -->
+                    <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
+                    <button class="btn btn-primary btn-md my-0 p" type="submit">Add to cart
                 <i class="fas fa-shopping-cart ml-1"></i>
               </button>
 
-                    </form> {% endcomment %}
-
-                    <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p">Add to cart
-                <i class="fas fa-shopping-cart ml-1"></i>
-            </a> {{ object.get_quantity_in_chart }}
-                    <a href="{{ object.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">Remove From cart
-                <i class="fas fa-trash ml-1"></i>
-            </a>
-
-
-                </div>
-                <!--Content-->
+                </form> {% endcomment %}
 
             </div>
-            <!--Grid column-->
+            <!--Content-->
 
         </div>
-        <!--Grid row-->
-
-        <hr>
-
-        <!--Grid row-->
-        <div class="row d-flex justify-content-center wow fadeIn">
-
-            <!--Grid column-->
-            <div class="col-md-6 text-center">
-
-                <h4 class="my-4 h4">Additional information</h4>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta odit voluptates, quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
-
-            </div>
-            <!--Grid column-->
-
-        </div>
-        <!--Grid row-->
-
-        <!--Grid row-->
-        <div class="row wow fadeIn">
-
-            <!--Grid column-->
-            <div class="col-lg-4 col-md-12 mb-4">
-
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
-
-            </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
-            <div class="col-lg-4 col-md-6 mb-4">
-
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
-
-            </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
-            <div class="col-lg-4 col-md-6 mb-4">
-
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
-
-            </div>
-            <!--Grid column-->
-
-        </div>
-        <!--Grid row-->
+        <!--Grid column-->
 
     </div>
-</main>
+    <!--Grid row-->
+
+
+    <!--Grid row-->
+
+    <!--Grid row-->
+
+    <!--Grid row-->
+    <!--Grid row-->
+
+</div>
+
 <!--Main layout-->
 
-{% endblock content %}
+{% endblock navcontent %}
