--- a/shop/templates/shop/cartdetail.html
+++ b/shop/templates/shop/cartdetail.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="table-responsive text-nowrap">
             <h3>
-                <strong>Your Cart</strong>
+                <strong>Your Cart {{request.user}}</strong>
             </h3>
             <table class="table">
                 <thead>
@@ -15,7 +15,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for i,j in list %} {% if i.user == j.user and j.user == user %}
+                    {% for i,j in list %} {% if i.user == j.user and j.user == request.user %}
                     <tr>
                         <th scope="row">
                             <details>
