--- a/templates/base.html
+++ b/templates/base.html
@@ -105,13 +105,17 @@
                             Initiatives
           </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a>
-                            <a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a>
-                            <a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a>
-                            <a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a>
-                            <a class="dropdown-item" href="{% url 'timetable:index' %}">Timetable</a>
-                            <a class="dropdown-item" href="{% url 'core:home' %}">Mechendise</a>
-                            <a class="dropdown-item" href="{% url 'dp:all' %}">Donation</a>
+                            <a class="dropdown-item" href="https://iitg.ac.in/cepstrum/inphase.html">Inphase</a>
+                            <!-- <a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a> -->
+                            <a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a>
+                            <!-- <a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a> -->
+                            <a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">PaperMan</a>
+                            <!-- <a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a> -->
+                            <!-- <a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a> -->
+                            <a class="dropdown-item" href="https://medium.com/inked-intellects">Inked Intelect</a>
+                            <!-- <a class="dropdown-item" href="{% url 'timetable:index' %}">Timetable</a> -->
+                            <!-- <a class="dropdown-item" href="{% url 'core:home' %}">Mechendise</a> -->
+                            <!-- <a class="dropdown-item" href="{% url 'dp:all' %}">Donation</a> -->
                             <a class="dropdown-item" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Inplex
                               </a>
