--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}{% load bootstrap %}{% load crispy_forms_tags %} {% load static %} {% block css %}
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Hind:300,400&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Hind:300,400&family=Nunito:wght@500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
     * {
         box-sizing: border-box;
     }
@@ -30,6 +31,9 @@
         border: none;
         background: none;
         outline: none;
+    }
+    .accordion-button{
+        padding: 0 20px;
     }
     
     .accordion button:hover,
@@ -112,7 +116,7 @@
     }
     
     .carousel-item {
-        height: 100vh;
+        height: 50vh;
         background: no-repeat center center scroll;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -139,7 +143,9 @@
 <div id="carouselExampleIndicators" class="carousel slide my-carousel
 my-carousel" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image: url('/static/inphase/cover.png') ">
+        <!-- <div class="carousel-item active" style="background-image: url('/static/inphase/cover.png') "> -->
+        <div class="carousel-item active" style="background: rgb(16,6,35);
+        background: linear-gradient(326deg, rgba(16,6,35,1) 0%, rgba(61,11,26,1) 100%);">
             <!-- <div style="padding-top: 40%; padding-left: 10%;">
         <button type="button" class="btn btn-secondary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl">Know more</button>
 
@@ -147,13 +153,10 @@ my-carousel" data-ride="carousel">
 
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1>Inplex | Add Your Experinces</b>
+                    <h1><b style="font-family: 'Nunito', serif;">Inplex </b>| 
+                        <span style="font-size: 1.4rem;">Add Your Experiences</span>
                     </h1>
                     <br>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi eveniet officia, asperiores deserunt vero numquam dolores assumenda exercitationem a ullam blanditiis at sint nihil suscipit nostrum illo, tempore quaerat.
-                        <br>
-                    </p>
                 </div>
 
 
@@ -165,8 +168,8 @@ my-carousel" data-ride="carousel">
 
 </div>
 {% endblock carousel %} {% block content %}
-<section class="container">
-    <h1>Add Experince</h1>
+<section class="container mt-5">
+    <!-- <h1>Add Experince</h1> -->
     <form method="POST" enctype="multipart/form-data">
     {% csrf_token %} {{ form.media }}
     <div class="form-row">
