--- a/inplex/templates/inplex/home.html
+++ b/inplex/templates/inplex/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% block css %}
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
+
     .carousel-item {
         height: 100vh;
         background: no-repeat center center scroll;
@@ -29,7 +31,8 @@
 <div id="carouselExampleIndicators" class="carousel slide my-carousel
 my-carousel" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image: url('/static/inphase/cover.png') ">
+        <div class="carousel-item active" style="background: rgb(16,6,35);
+        background: linear-gradient(326deg, rgba(16,6,35,1) 0%, rgba(61,11,26,1) 100%);">
             <!-- <div style="padding-top: 40%; padding-left: 10%;">
         <button type="button" class="btn btn-secondary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl">Know more</button>
 
@@ -37,18 +40,18 @@ my-carousel" data-ride="carousel">
 
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1>Inplex</b>
+                    <h1><b style="font-family: 'Nunito', serif;">Inplex</b>
                     </h1>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi eveniet officia, asperiores deserunt vero numquam dolores assumenda exercitationem a ullam blanditiis at sint nihil suscipit nostrum illo, tempore quaerat.
+                        Internships and placements are some of the most important milestones of one's college life. Hence, we at Cepstrum, IIT Guwahati have come up with yet another initiative, Inplex. It aims to provide a platform for seniors to share their valuable placement and intern season experiences for the upcoming batches to learn from. 
+                    </p>
                         <br>
                         {% if created %}
-                        <a class="btn-primary" href="{% url 'inplex:experience_create' %}">Add experience</a>
+                            <a class='btn btn-primary' href="{% url 'inplex:experience_create' %}">Add your experience</a>
                         {% else %}
-                        <a class="btn-primary" href="{% url 'inplex:student_create' %}">Create profile</a>
+                            <a class='btn btn-primary' href="{% url 'inplex:student_create' %}">Create profile</a>
                         {% endif %}
-                    </p>
                 </div>
 
 
