--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    
+
 
 </head>
 <style>
@@ -105,8 +105,7 @@
                             Initiatives
           </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="https://iitg.ac.in/cepstrum/inphase.html">Inphase</a>
-                            <!-- <a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a> -->
+                            <a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a>
                             <a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a>
                             <!-- <a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a> -->
                             <a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">PaperMan</a>
