--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,7 @@
                         The world is changing very fast.", says Rupert Murdoch, "Big will not beat small anymore. It will be the fast beating the slow." And surely it will be the more informed beating the lesser one, the most knowledge bearing person getting ahead of the rest.
                         <br>
                         <br>
+
                         <a href="{% url 'inphase:all' %}" class="link-button">Know More</a>
                     </p>
                 </div>
@@ -139,12 +140,12 @@
         </div>
 
 
-        <!-- <div class="carousel-item" data-interval="9000">
-      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <div class="carousel-item" data-interval="9000">
+            <video autoplay muted loop width="100%" height="121%" id="myVideo">
         <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
       </video>
 
-    </div> -->
+        </div>
 
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
