--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                     <li class="nav-item active NavItem mx-3">
                         <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
-                    {% if user.is_authenticated %}
+                    <!-- {% if user.is_authenticated %}
                     <li class="nav-item dropdown active" class="">
                         <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Current Campus Junta
@@ -102,7 +102,8 @@
                             <a class="dropdown-item" href="{% url 'account_set_password' %}">Set your password</a>
                         </div>
                     </li>
-                    {% else %} {% endif %}
+                    {% else %} 
+                    {% endif %} -->
                     <li class="nav-item dropdown active" class="">
                         <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Initiatives
