--- a/templates/index.html
+++ b/templates/index.html
@@ -100,11 +100,13 @@
         </div>
 
         <div class="carousel-item" style="background-image:
-        url('/static/inphase/cover.png'); width: 100%">
+        url('{{inphase_list.0.pic.url}}'); width: 100%">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
                     <h1><b>About <br> Inphase </b> </h1>
                     <br>
+                    <h1></h1>
+
                     <p>
                         The world is changing very fast.", says Rupert Murdoch, "Big will not beat small anymore. It will be the fast beating the slow." And surely it will be the more informed beating the lesser one, the most knowledge bearing person getting ahead of the rest.
                         <br>
