--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -1,8 +1,4 @@
-{% extends 'base.html' %}
-{% load bootstrap %} 
-{% load crispy_forms_tags %} 
-{% load static %}
-{% block css %}
+{% extends 'base.html' %} {% load bootstrap %} {% load crispy_forms_tags %} {% load static %} {% block css %}
 <style>
     @import url('https://fonts.googleapis.com/css?family=Hind:300,400&family=Nunito:wght@500&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
@@ -184,8 +180,9 @@ my-carousel" data-ride="carousel">
             <div class="form-group col-md-6 mb-0">
                 {{ form.profile|as_crispy_field }}
             </div>
+
             <div class="form-group col-md-6 mb-0">
-                {{ form.selected|as_crispy_field }}
+                <br> {{ form.selected|as_crispy_field }}
             </div>
         </div>
         <br>
